<resources>
    <string name="app_name">Wildr</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_form">Form</string>
    <string name="menu_list">List</string>
    <string name="menu_detail">Detail</string>
    <string name="menu_welcome">Welcome</string>
    <string name="menu_animalgallery">Gallery</string>
    <string name="menu_info">Info</string>
    <string name="menu_contact">Contact</string>

    <string name="button_addAnimal">Add Animal</string>
    <string name="hint_Name">Animal Name</string>
    <string name="hint_Type">Animal Type</string>
    <string name="hint_Sex">Animal Sex</string>
    <string name="menu_addAnimal">Add</string>
    <string name="menu_cancelAnimal">Cancel</string>
    <string name="enter_animal_Type"> Please enter a Animal Type </string>
    <string name="save_animal"> Save Animal </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_animal_image">Select animal image</string>
    <string name="change_animal_image">Change animal image</string>
    <string name="menu_deleteAnimal">Delete</string>

    <string name="action_form">Form</string>
    <string name="action_list">List</string>
    <string name="action_welcome">Welcome</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_contact">Contact</string>
    <string name="action_slideshow">Slideshow</string>

    <string name="group_info">Information</string>

    <string name="address_waterford_institute_of_technology_cork_road_waterford">Address: Waterford Institute of Technology,
        Cork Road,
        Waterford</string>
    <string name="email_wildrapp_wildworld_ie">Email: WildrApp@wildworld.ie</string>

    <string name="animalsNotFound">No Animals Yet...\nGo Add an Animal!</string>
    <string name="animalError">Error : Couldn\'t add an Animal...</string>

    <string name="AnimalDetails">Animal Details</string>
    <string name="type">Type :</string>
    <string name="name">Name :</string>
    <string name="sex">Sex :</string>

    <string name="messageLoading">Please Wait while your animals are Loading...</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="select_profile_image">Select Profile Image</string>
</resources>